--- a/app/src/main/res/layout/row_video.xml
+++ b/app/src/main/res/layout/row_video.xml
@@ -19,6 +19,8 @@
             android:adjustViewBounds="true"
             android:scaleType="centerCrop" />
 
+
+
         <TextView
             android:id="@+id/textview_video_title"
             android:layout_width="match_parent"
@@ -30,7 +32,8 @@
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
             android:text="Video Title"
-            android:textSize="18sp" />
+            android:textColor="#000000"
+            android:textSize="16sp" />
 
 
     </LinearLayout>
